#1203 Use altitude information from digital heigth model
